added about-me and footer

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -18,8 +18,9 @@
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: grey;
+    background-color: #404040;
     color: #ffffff;
+    flex-wrap: wrap;
 }
 
 .header h1 {
