--- a/Assets/style.css
+++ b/Assets/style.css
@@ -14,6 +14,13 @@
     flex-wrap: wrap;
 }
 
+:root {
+    --header-footer-background-color: #404040;
+    --lightskyblue: lightskyblue;
+    --lightgray: lightgray;
+    --rgba-border-color-opacity: rgba(135, 206, 250, 0.8)
+}
+
 /* HEADER NAVIGATION */
 
 .header {
@@ -50,13 +57,6 @@
 
 /* END OF HEADER NAV */
 
-.about-me-content {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 50px;
-    justify-content: center;
-    justify-content: space-between;
-}
 
 .about-me-grid-content {
     width: 80%;
@@ -72,7 +72,7 @@
     grid-row: 1 / span 4;
     padding-right: 10px;
     text-align: right;
-    border-right: 2px solid var();
+    border-right: 2px solid var(--lightskyblue);
 }
 
 .about-me-item {
@@ -80,3 +80,59 @@
     grid-column: 2 / span 3;
     grid-row: 1 / span 2;
 }
+
+.work-tab-grid-content {
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr repeat(3, 2fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 10px 10px;
+}
+
+.work-tab-title {
+    padding-top: 0px;
+    font-size: 40px;
+    grid-row: 1 / span 4;
+    padding-right: 10px;
+    text-align: right;
+    border-right: 2px solid var(--lightskyblue);
+}
+
+.footer-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.footer-container {
+    width: 80%;
+    display: grid;
+    gap: 20px 20px;
+}
+
+.footer-grid-item {
+    text-align: center;
+}
+
+.footer-grid-item.contact-me {
+    padding-top: 10px;
+    font-size: 35px;
+    grid-row: 1 / span 3;
+    text-align: right;
+    padding-right: 10px;
+    border-right: 2px solid var(--lightskyblue);
+}
+
+.footer-grid-item.phone {
+    grid-row: 2;
+}
+
+.footer-grid-item.email {
+    grid-row: 2;
+}
+
+.footer-grid-item.git-hub {
+    grid-row: 2;
+}
+
