inserted my image and updated media queries

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -12,6 +12,24 @@
     background-size: cover;
     background-position: center;
     flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.hero-subtitle {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: white;
+    font-size: 100px;
+    line-height: 1.2;
+    flex-wrap: wrap;
+}
+
+.hero img {
+    height: 175px;
+    width: 175px;
+    align-items: flex-start;
+    margin-right: 15%;
 }
 
 :root {
@@ -48,11 +66,20 @@
 
 .header nav ul {
     list-style-type: none;
+    flex-wrap: wrap;
 }
 
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
+    flex-wrap: wrap;
+}
+
+.header nav ul li a {
+    padding: 10px 15px;
+    font-weight: lighter;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    flex-wrap: wrap;
 }
 
 /* END OF HEADER NAV */
@@ -85,7 +112,6 @@
     width: 80%;
     display: grid;
     grid-template-columns: 1fr repeat(3, 2fr);
-    grid-template-rows: repeat(4, 1fr);
     gap: 10px 10px;
 }
 
@@ -96,6 +122,13 @@
     padding-right: 10px;
     text-align: right;
     border-right: 2px solid var(--lightskyblue);
+}
+.contents {
+    background-color: lightgray;
+}
+
+.flex-row {
+    display: flex;
 }
 
 .footer-wrapper {
@@ -117,9 +150,9 @@
 
 .footer-grid-item.contact-me {
     padding-top: 10px;
-    font-size: 35px;
+    font-size: 20px;
     grid-row: 1 / span 3;
-    text-align: right;
+    text-align: left;
     padding-right: 10px;
     border-right: 2px solid var(--lightskyblue);
 }
@@ -136,3 +169,63 @@
     grid-row: 2;
 }
 
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+    header nav ul li a {
+        font-size: 20px;
+    }
+    footer h2, footer div {
+        text-align: center;
+        width: 100%;
+    }
+    .hero-subtitle {
+        text-align: center;
+    }
+    .hero-subtitle {
+        text-align: center;
+    }
+    .work-tab-title {
+        text-align: center;
+    }
+    
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width 768px) {
+    .work-tab-grid-content {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+    .work-tab-title {
+        text-align: center;
+    }
+    .hero-subtitle {
+        text-align: center;
+    }
+    .span-background opacity:;
+}
+
+@media screen and (max-width 575px) {
+    .hero-subtitle {
+        text-align: center;
+    }
+    .work-tab-title {
+        text-align: center;
+    }
+}
